--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
 body {
-    margin: 0;
     background-color: #000;
     color: #f5f5f5;
     font-family: Georgia, serif;
